[HTML Layouts] Optimize task-list.html and styles for it

--- a/src/task-list.html
+++ b/src/task-list.html
@@ -14,120 +14,99 @@
 		</nav>
 	</header>
 	<main>
-		<ul class="tasks">
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Lesson</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator project-1">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">education</div>
-						</div>
+		<ul class="task">
+			<li class="task-item task-item_project-1">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Lesson</div>
+						<div class="task-item__project">education</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__alarm">17:00</div>
-						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
+						<div class="task-item__alarm">19:00</div>
+						<div class="task-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Do the home work</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator  project-1">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">education</div>
-						</div>
+			<li class="task-item task-item_project-1">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Do the home work</div>
+						<div class="task-item__project">education</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator project-2">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">home</div>
-						</div>
+			<li class="task-item task-item_project-2">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Buy food in Wallmart</div>
+						<div class="task-item__project">home</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__alarm">17:00</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
+						<div class="task-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Gym</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator project-6">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">health</div>
-						</div>
+			<li class="task-item task-item_project-6">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Gym</div>
+						<div class="task-item__project">health</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
+						<div class="task-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Do the home work</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator  project-1">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">education</div>
-						</div>
+			<li class="task-item task-item_project-1">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Do the home work</div>
+						<div class="task-item__project">education</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator project-2">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">home</div>
-						</div>
+			<li class="task-item task-item_project-2">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Buy food in Wallmart</div>
+						<div class="task-item__project">home</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__alarm">17:00</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
+						<div class="task-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Gym</div>
-						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator project-6">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">health</div>
-						</div>
+			<li class="task-item task-item_project-6">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
+						<div class="task-item__name">Gym</div>
+						<div class="task-item__project">health</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
+						<div class="task-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
