[HTML Layouts] Combined styles for two buttons in header

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -8,9 +8,9 @@
 <body>
 	<header class="header">
 		<nav class="header-nav header-nav_project-3">
-			<button class="header-nav__options">&nbsp;</button>
-			<span class="header-nav__title">work</span>
-			<button class="header-nav__add">&nbsp;</button>
+			<button class="header__button_menu">&nbsp;</button>
+			<span class="header__title">work</span>
+			<button class="header__button_add">&nbsp;</button>
 		</nav>
 	</header>
 	<main>
