--- a/src/task-list.html
+++ b/src/task-list.html
@@ -8,9 +8,9 @@
 <body>
 	<header class="header">
 		<nav class="header-nav">
-			<button class="header-nav__options">&nbsp;</button>
-			<span class="header-nav__title">29 mar 2015</span>
-			<button class="header-nav__add">&nbsp;</button>
+			<button class="header__button_menu">&nbsp;</button>
+			<span class="header__title">29 mar 2015</span>
+			<button class="header__button_add">&nbsp;</button>
 		</nav>
 	</header>
 	<main>
