[HTML Layouts] Cut off nav from header

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -7,113 +7,113 @@
 </head>
 <body>
 	<header class="header">
-		<nav class="header-nav header-nav_project-3">
+		<div class="header-nav header-nav_project-3">
 			<button class="header__button_menu">&nbsp;</button>
 			<span class="header__title">work</span>
 			<button class="header__button_add">&nbsp;</button>
-		</nav>
+		</div>
 	</header>
 	<main>
-		<ul class="task">
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Lesson</div>
-						<div class="task-item__date">28 mar</div>
+		<ul class="tasks">
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Lesson</div>
+						<div class="tasks-item__date">28 mar</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">&nbsp;</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Do the home work</div>
-						<div class="task-item__date">29 mar</div>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Do the home work</div>
+						<div class="tasks-item__date">29 mar</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">&nbsp;</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Buy food in Wallmart</div>
-						<div class="task-item__date">31 mar</div>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Buy food in Wallmart</div>
+						<div class="tasks-item__date">31 mar</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__alarm">19:00</div>
-					</div>
-				</div>
-			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Lesson</div>
-					</div>
-				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__measurement">12:43:34</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Do the home work</div>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Lesson</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">&nbsp;</div>
-				</div>
-			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Buy food in Wallmart</div>
-						<div class="task-item__date">31 mar</div>
-					</div>
-				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__alarm">19:00</div>
-						<div class="task-item__alarm">19:00</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Lesson</div>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Do the home work</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__measurement">12:43:34</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+			</li>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Buy food in Wallmart</div>
+						<div class="tasks-item__date">31 mar</div>
+					</div>
+				</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__alarm">19:00</div>
+						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="task-item">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Do the home work</div>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Lesson</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">&nbsp;</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__measurement">12:43:34</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-item">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Do the home work</div>
+					</div>
+				</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
 		</ul>
