--- a/src/task-list.html
+++ b/src/task-list.html
@@ -7,106 +7,106 @@
 </head>
 <body>
 	<header class="header">
-		<nav class="header-nav">
+		<div class="header-nav">
 			<button class="header__button_menu">&nbsp;</button>
 			<span class="header__title">29 mar 2015</span>
 			<button class="header__button_add">&nbsp;</button>
-		</nav>
+		</div>
 	</header>
 	<main>
-		<ul class="task">
-			<li class="task-item task-item_project-1">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Lesson</div>
-						<div class="task-item__project">education</div>
+		<ul class="tasks">
+			<li class="tasks-item tasks-item_project-1">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Lesson</div>
+						<div class="tasks-item__project">education</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__alarm">19:00</div>
-						<div class="task-item__measurement">12:43:34</div>
-					</div>
-				</div>
-			</li>
-			<li class="task-item task-item_project-1">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Do the home work</div>
-						<div class="task-item__project">education</div>
-					</div>
-				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">&nbsp;</div>
-				</div>
-			</li>
-			<li class="task-item task-item_project-2">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Buy food in Wallmart</div>
-						<div class="task-item__project">home</div>
-					</div>
-				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__alarm">19:00</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__alarm">19:00</div>
+						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
-			<li class="task-item task-item_project-6">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Gym</div>
-						<div class="task-item__project">health</div>
+			<li class="tasks-item tasks-item_project-1">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Do the home work</div>
+						<div class="tasks-item__project">education</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__measurement">12:43:34</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+			</li>
+			<li class="tasks-item tasks-item_project-2">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Buy food in Wallmart</div>
+						<div class="tasks-item__project">home</div>
+					</div>
+				</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="task-item task-item_project-1">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Do the home work</div>
-						<div class="task-item__project">education</div>
+			<li class="tasks-item tasks-item_project-6">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Gym</div>
+						<div class="tasks-item__project">health</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">&nbsp;</div>
-				</div>
-			</li>
-			<li class="task-item task-item_project-2">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Buy food in Wallmart</div>
-						<div class="task-item__project">home</div>
-					</div>
-				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__alarm">19:00</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
-			<li class="task-item task-item_project-6">
-				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-item-content">
-					<div class="task-item-wrapper">
-						<div class="task-item__name">Gym</div>
-						<div class="task-item__project">health</div>
+			<li class="tasks-item tasks-item_project-1">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Do the home work</div>
+						<div class="tasks-item__project">education</div>
 					</div>
 				</div>
-				<div class="task-item-time">
-					<div class="task-item-wrapper">
-						<div class="task-item__measurement">12:43:34</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+			</li>
+			<li class="tasks-item tasks-item_project-2">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Buy food in Wallmart</div>
+						<div class="tasks-item__project">home</div>
+					</div>
+				</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__alarm">19:00</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-item tasks-item_project-6">
+				<div class="tasks-item__checkbox">&nbsp;</div>
+				<div class="tasks-item-content">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__name">Gym</div>
+						<div class="tasks-item__project">health</div>
+					</div>
+				</div>
+				<div class="tasks-item-time">
+					<div class="tasks-item-wrapper">
+						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
