Add today-task-list.html and small refactoring of project-list.html

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -7,153 +7,153 @@
 </head>
 <body>
 
-	<header class="header">
-		<div class="header__menu"></div>
+	<header class="header header_blue">
+		<div class="header__menu header__menu_blue"></div>
             <b>WORK</b>
             <span class="editor-icon"></span>
-        <div class="header__add"></div>
+        <div class="header__add header__add_blue"></div>
     </header>
 
     <ul class="project-list">
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk1">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk1" name="chk1" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Lesson</b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk2">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk2" name="height" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Do the home work </b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk3">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk3" name="height"  type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Buy food in Wallmart</b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
             <div class="time-info">
-                <span class="datepicker">
-                    <span class="datepicker__notificator"></span>
+                <span class="additional-info">
+                    <span class="additional-info__notificator"></span>
                     <b>19:00</b>
                 </span>
             </div>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk4">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk4" name="height" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Lesson</b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
             <div class="time-info">
-                <span class="datepicker">
-                    <span class="datepicker__timer"></span>
+                <span class="additional-info">
+                    <span class="additional-info__timer"></span>
                     <b>12:43:34</b>
                 </span>
             </div>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk5">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk5" name="height" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Do the home work </b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk6">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk6" name="height" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Buy food in Wallmart</b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
             <div class="time-info">
-                <span class="datepicker">
-                    <span class="datepicker__notificator"></span>
+                <span class="additional-info">
+                    <span class="additional-info__notificator"></span>
                     <b>19:00</b>
                 </span>
             </div>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk7">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk7" name="height" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Lesson</b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
             <div class="time-info">
-                <span class="datepicker">
-                    <span class="datepicker__timer"></span>
+                <span class="additional-info">
+                    <span class="additional-info__timer"></span>
                     <b>12:43:34</b>
                 </span>
             </div>
         </li>
 
-        <li class="project-list__item">
+        <li class="project-list__item project-list__item_default">
             <label for="chk8">
-                <div class="checkbox-icon"></div>
+                <div class="checkbox checkbox_default"></div>
             </label>
             <input class="checkbox-control" id="chk8" name="height" type="checkbox" />
-            <span class="content">
+            <span class="note-header">
                 <b>Do the home work </b>
                 <br />
-                <span class="datepicker">
-                    <span class="datepicker__calendar"></span>
+                <span class="additional-info">
+                    <span class="additional-info__calendar"></span>
                     <b> 28 MAR</b>
                 </span>
             </span>
