[HTML Layouts] Finish week-task-list.html and styles for it; rename some variables of colors

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -43,7 +43,7 @@
 				<div class="tasks-item__checkbox">&nbsp;</div>
 				<div class="tasks-item-content">
 					<div class="tasks-item-wrapper">
-						<div class="tasks-item__name">Buy food in Wallmart</div>
+						<div class="tasks-item__name">Buy food in Wallmar</div>
 						<div class="tasks-item__date">31 mar</div>
 					</div>
 				</div>
