[HTML Layouts] Add text-overflow for item__name, item__project, header_title

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -9,7 +9,7 @@
 	<header class="header">
 		<div class="header-nav header-nav_project-3">
 			<button class="header__button_menu">&nbsp;</button>
-			<span class="header__title">work</span>
+			<span class="header__title">workdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</span>
 			<button class="header__button_add">&nbsp;</button>
 		</div>
 	</header>
@@ -43,7 +43,7 @@
 				<div class="tasks-item__checkbox">&nbsp;</div>
 				<div class="tasks-item-content">
 					<div class="tasks-item-wrapper">
-						<div class="tasks-item__name">Buy food in Wallmar</div>
+						<div class="tasks-item__name">Buy food in Wallmaradsfasdfasdasdf</div>
 						<div class="tasks-item__date">31 mar</div>
 					</div>
 				</div>
