--- a/src/task-list.html
+++ b/src/task-list.html
@@ -20,7 +20,7 @@
 				<div class="tasks-item-content">
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__name">Lesson</div>
-						<div class="tasks-item__project">education</div>
+						<div class="tasks-item__project">educationasdfasdfadsfadfadfasdfadsfasd</div>
 					</div>
 				</div>
 				<div class="tasks-item-time">
