--- a/src/task-list.html
+++ b/src/task-list.html
@@ -4,7 +4,7 @@
     @@include('./html/_head.html')
 </head>
 <body>
-    @@include('./html/blocks/header.html', {"color": "default", "text" : "29 mar 2015", "title_icon": false})
+    @@include('./html/blocks/header.html', {"color": "default", "title" : "29 mar 2015", "title_icon": false})
     @@include('./html/blocks/today-task-list.html', {})
 </body>
 </html>
