[BEM] - Optimize name task-list-item -> task-item

--- a/src/html/blocks/today-task-list.html
+++ b/src/html/blocks/today-task-list.html
@@ -1,12 +1,12 @@
 <ul class="task-list">
-    @@include('./task-list-item.html', { "title": "Lesson",
+    @@include('./task-item.html', { "title": "Lesson",
         "group": "education",
         "group_mixin":"color_green",
         "deadline_date": "education",
         "checkbox_mod" : "_checked"
     })
 
-    @@include('./task-list-item.html',{
+    @@include('./task-item.html',{
         "title": "Do the home work",
         "group": "education",
         "group_mixin":"color_green",
@@ -14,7 +14,7 @@
         "checkbox_mod" : ""
     })
 
-    @@include('./task-list-item.html', {
+    @@include('./task-item.html', {
         "title": "Buy food in Wallmart",
         "group": "home",
         "group_mixin":"color_orange",
@@ -22,7 +22,7 @@
         "checkbox_mod" : ""
     })
 
-    @@include('./task-list-item.html', {
+    @@include('./task-item.html', {
         "title": "Gym",
         "group": "health",
         "group_mixin":"color_orange",
@@ -30,7 +30,7 @@
         "checked": true
     })
 
-    @@include('./task-list-item.html', {
+    @@include('./task-item.html', {
         "title": "Do the home work",
         "group": "education",
         "group_mixin":"color_green",
@@ -38,7 +38,7 @@
         "checkbox_mod" : "_checked"
     })
 
-    @@include('./task-list-item.html', {
+    @@include('./task-item.html', {
         "title": "By food in Wallmart",
         "group": "home",
         "group_mixin":"color_orange",
@@ -46,7 +46,7 @@
         "checkbox_mod" : ""
     })
 
-    @@include('./task-list-item.html', {
+    @@include('./task-item.html', {
         "title": "Gym",
         "group": "health",
         "group_mixin":"color_orange",
